--- a/index-map.html
+++ b/index-map.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <script type="text/javascript" src="classemap.js"></script>
+    <script type="text/javascript" src="maps.js"></script>
     </script>
 </body>
 </html>
